# OpenGLRender

./: CMakeLists.txt  README.md
assets/shaders/: lightsrc.frag  shader.frag  shader.vert
include/: camera.h  shader.h  texture.h
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp  textures.cpp
